--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prema Yoga Cleveland</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
   <style>
