Write index page content

--- a/index.html
+++ b/index.html
@@ -5,64 +5,135 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prema Yoga Cleveland</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      width: 100vw;
-      height: 100vh;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font: 300 16px/1 "Signika", sans-serif;
-      background: #cea70c;
-      color: #4d4d4d;
-      text-align: center;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      display: -webkit-flex;
-      -webkit-align-items: center;
-      -webkit-justify-content: center;
-    }
-
-    .inverted {
-      color: #fff;
-    }
-
-    .line {
-      display: block;
-    }
-
-    .main {
-      font-size: 2.2em;
-      letter-spacing: -0.03em;
-    }
-
-    h1 {
-      font-size: 2em;
-      font-weight: inherit;
-      margin-bottom: 1em;
-    }
-
-    p {
-      text-transform: uppercase;
-    }
-  </style>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <div>
-    <h1>
-      <span class="line inverted main">Sivananda</span>
-      <span class="line">Classical Hatha Yoga</span>
+<div class="pageWrap">
+
+
+<div class="gridCell--row gridCell--padded">
+  <header class="pageHeader">
+    <h1 class="headline pageHeader__headline align--center">
+      <span class="headline__line pageHeader__primary inverted">
+        Sivananda
+      </span>
+      <span class="headline__line pageHeader__secondary">
+        Classical Hatha Yoga
+      </span>
     </h1>
-    <p>Coming Soon</p>
+  </header>
+</div>
+
+<div class="gridCell--row">
+
+  <div class="gridCell--col gridCell--padded">
+    <article class="program">
+
+      <h2 class="headline inverted uppercase">Yoga</h2>
+
+      <div class="meta uppercase">
+        <p class="meta__item">
+          <span class="unbreakable">Wednesdays 6:00 — 7:00pm</span>
+          <span class="unbreakable">@ Unity Spiritual Center</span>
+        </p>
+        <p class="meta__item">$12 drop-in</p>
+        <p class="meta__item">Class packages are available</p>
+      </div>
+
+      <div class="content">
+        <p>Sivananda Classical Hatha Yoga is a traditional practice based on the Five Points of Yoga including proper exercise, proper breathing, proper relaxation, proper diet, and meditation/positive thinking.</p>
+        <p>The physical practice combines meditation, breath work, and asanas to provide healing to the body, mind, and spirit.</p>
+        <p>The atmosphere is quiet and relaxing, with practitioners focused on their inward state.</p>
+        <p>Each class includes sanskrit chanting, breath work, asanas (postures), and a final relaxation.</p>
+        <p>Classes are suitable for any level of practitioner.</p>
+      </div>
+
+      <section class="additionalInfo">
+        <h3 class="headline inverted">Certifications &amp; Experience</h3>
+        <ul class="basicList">
+          <li>
+            Yoga Alliance Registered Yoga Teacher <br />
+            Sivananda Teacher Training Course <br />
+            New York City, NY — Sivananda Vedanta Center — Live-in staff and teacher <br />
+          </li>
+          <li>
+            Parma Heights, OH — The Reiki Shop — Yoga teacher
+          </li>
+          <li>
+            Nationwide touring yoga teacher for bands/musicians
+          </li>
+          <li>
+            Centered Wellness Affiliate
+          </li>
+        </ul>
+      </section>
+
+    </article>
   </div>
+
+  <div class="gridCell--col gridCell--padded">
+    <article class="program">
+
+      <h2 class="headline inverted uppercase">Reiki</h2>
+
+      <div class="meta uppercase">
+        <p class="meta__item">
+          <span class="unbreakable">By appointment only</span>
+          <span class="unbreakable">@ Unity Spiritual Center</span>
+          <span class="unbreakable">— evenings and weekends available</span>
+        </p>
+        <p class="meta__item">$60 — 1 hour healing and relaxation session</p>
+        <p class="meta__item">Monthly packages are available</p>
+      </div>
+
+      <div class="content">
+        <p>Reiki is a sacred healing method that provides Universal Energy throughout the body and mind.</p>
+        <p>Each session is tailored specifically to the client’s needs and requests.</p>
+        <p>The experience is one of deep relaxation, with many clients falling into a calm and quiet meditative sleep.</p>
+        <p>Reiki is a healing form for anyone experiencing stress, depression, physical illness, a need for spiritual guidance, or just a much needed monthly rejuvenation.</p>
+      </div>
+
+      <section class="additionalInfo">
+        <h3 class="headline inverted">Certifications &amp; Experience</h3>
+        <ul class="basicList">
+          <li>Reiki I, II — Reverend Kelley Glass — Erie, PA</li>
+          <li>Reiki I, II, III — The Ideal Method — Westlake, OH</li>
+          <li>Shamanic Reiki — Mary Maynard — Westlake, OH</li>
+          <li>Centered Wellness Affiliate</li>
+        </ul>
+      </section>
+
+    </article>
+  </div>
+
+</div>
+
+<div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
+  <footer class="pageFooter align--center">
+    <p class="pageFooter__item">
+      Contact Renee at
+      <a href="mailto:premayogacleveland@gmail.com">
+        premayogacleveland@gmail.com
+      </a>
+    </p>
+    <div class="pageFooter__item">
+      <p>
+        <span class="unbreakable">Yoga classes and reiki sessions</span>
+        <span class="unbreakable">are located at</span>
+      </p>
+      <address>
+        Unity Spiritual Center <br />
+        23855 Detroit Road <br />
+        Westlake, OH 44145
+      </address>
+    </div>
+    <p class="pageFooter__item">
+      <a class="unbreakable" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
+      <a class="unbreakable" href="http://www.sivananda.org">www.sivananda.org</a>
+    </p>
+  </footer>
+</div>
+
+</div>
 </body>
 </html>
