Separate footer links more

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
       </address>
     </div>
     <p class="pageFooter__item">
-      <a class="unbreakable" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
-      <a class="unbreakable" href="http://www.sivananda.org">www.sivananda.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org">www.sivananda.org</a>
     </p>
   </footer>
 </div>
