Add unnecessary rule between columns

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 <div class="gridCell--row">
 
-  <div class="gridCell--col gridCell--padded">
+  <div class="gridCell--col gridCell--padded program__col">
     <article class="program">
 
-      <h2 class="headline inverted uppercase">Yoga</h2>
+      <h2 class="headline inverted uppercase program__title">Yoga</h2>
 
       <div class="meta uppercase">
         <p class="meta__item">
@@ -71,10 +71,10 @@
     </article>
   </div>
 
-  <div class="gridCell--col gridCell--padded">
+  <div class="gridCell--col gridCell--padded program__col">
     <article class="program">
 
-      <h2 class="headline inverted uppercase">Reiki</h2>
+      <h2 class="headline inverted uppercase program__title">Reiki</h2>
 
       <div class="meta uppercase">
         <p class="meta__item">
