Fix yoga certifications
Turns out these are all separate items.

--- a/index.html
+++ b/index.html
@@ -51,20 +51,12 @@
       <section class="additionalInfo">
         <h3 class="headline inverted">Certifications &amp; Experience</h3>
         <ul class="basicList">
-          <li>
-            Yoga Alliance Registered Yoga Teacher <br />
-            Sivananda Teacher Training Course <br />
-            New York City, NY — Sivananda Vedanta Center — Live-in staff and teacher <br />
-          </li>
-          <li>
-            Parma Heights, OH — The Reiki Shop — Yoga teacher
-          </li>
-          <li>
-            Nationwide touring yoga teacher for bands/musicians
-          </li>
-          <li>
-            Centered Wellness Affiliate
-          </li>
+          <li>Yoga Alliance Registered Yoga Teacher</li>
+          <li>Sivananda Teacher Training Course</li>
+          <li>New York City, NY — Sivananda Vedanta Center — Live-in staff and teacher</li>
+          <li>Parma Heights, OH — The Reiki Shop — Yoga teacher</li>
+          <li>Nationwide touring yoga teacher for bands/musicians</li>
+          <li>Centered Wellness Affiliate</li>
         </ul>
       </section>
 
