Change pageHeader content and styles
Stupid descender “g” warranted a switch to uppercase which isn’t great,
but trying to keep things simple.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <header class="pageHeader">
     <h1 class="headline pageHeader__headline align--center">
       <span class="headline__line pageHeader__primary inverted">
-        Sivananda
+        Prema Yoga
       </span>
       <span class="headline__line pageHeader__secondary">
-        Classical Hatha Yoga
+        Cleveland
       </span>
     </h1>
   </header>
