Center pageHeader against my will
Also adjust some spacing because the unnecessary vertical rule looks
like it’s impaling the header now. Plus the way I had the spacing set
up was a bit :👃:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="pageWrap">
 
 
-<div class="gridCell--row gridCell--padded">
+<div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
   <header class="pageHeader">
     <h1 class="headline pageHeader__headline align--center">
       <span class="headline__line pageHeader__primary inverted">
@@ -24,7 +24,7 @@
   </header>
 </div>
 
-<div class="gridCell--row">
+<div class="gridCell--row program__row">
 
   <div class="gridCell--col gridCell--padded program__col">
     <article class="program">
