I guess you can be a Reiki master

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <ul class="basicList">
           <li>Reiki I, II — Reverend Kelley Glass — Erie, PA</li>
           <li>Reiki I, II, III — The Ideal Method — Westlake, OH</li>
-          <li>Shamanic Reiki — Mary Maynard — Westlake, OH</li>
+          <li>Shamanic Reiki Master — Mary Maynard — Westlake, OH</li>
           <li>Centered Wellness Affiliate</li>
         </ul>
       </section>
