Change title to "Healing"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Prema Yoga Cleveland</title>
+  <title>Prema Healing Cleveland</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
   <link rel="stylesheet" href="main.css" />
 </head>
