Changed h1 to Healing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="pageHeader">
     <h1 class="headline pageHeader__headline align--center">
       <span class="headline__line pageHeader__primary inverted">
-        Prema Yoga
+        Prema Healing
       </span>
       <span class="headline__line pageHeader__secondary">
         Cleveland
