Ron's initial updates
- Changed “Yoga” to “Healing”
- Changed email
- Added Beginner Course Page
- Added text-shadow to h1, h2, h3
- Changed a:hover to text-shadow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="pageWrap">
 
-
+<!-- HEADER -------------->
 <div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
   <header class="pageHeader">
     <h1 class="headline pageHeader__headline align--center">
@@ -26,6 +26,7 @@
 
 <div class="gridCell--row program__row">
 
+  <!-- COL A -------------->
   <div class="gridCell--col gridCell--padded program__col">
     <article class="program">
 
@@ -33,11 +34,8 @@
 
       <div class="meta uppercase">
         <p class="meta__item">
-          <span class="unbreakable">Wednesdays 6:00 — 7:30pm</span>
-          <span class="unbreakable">@ Unity Spiritual Center</span>
+          <span class="unbreakable"><a href="beginners-yoga-course.html">Sign up here for the Beginners Yoga Course starting April 13th!</a></span>
         </p>
-        <p class="meta__item">$12 drop-in</p>
-        <p class="meta__item">Class packages are available</p>
       </div>
 
       <div class="content">
@@ -63,6 +61,7 @@
     </article>
   </div>
 
+  <!-- COL B -------------->
   <div class="gridCell--col gridCell--padded program__col">
     <article class="program">
 
@@ -100,12 +99,13 @@
 
 </div>
 
+<!-- FOOTER -------------->
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
   <footer class="pageFooter align--center">
     <p class="pageFooter__item">
-      Contact Renee at
-      <a href="mailto:premayogacleveland@gmail.com">
-        premayogacleveland@gmail.com
+      Contact
+      <a href="mailto:renee@premahealingcleveland.com">
+        renee@premahealingcleveland.com
       </a>
     </p>
     <div class="pageFooter__item">
