Content, responsive styling, footer changes
- Made .program__row wider to accommodate new content when >60em
-  “unbreakable” class only applies when viewport is >60em (“Sign up
here for Beginners Yoga…” was not wrapping with the rest of the text in
mobile view )
- Beginners Course page no longer centered
- Cert. and Exp. sections updated
- Added tel. #
- Added links to footer
- Footer links display as block in mobile view
- Beg. course signup link opens in new tab

--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -23,7 +23,7 @@
 <div class="gridCell--row program__row gridCell--row--justifyCenter">
 
   <!-- COL A -->
-  <div class="gridCell--col gridCell--padded program__col align--center">
+  <div class="gridCell--col gridCell--padded program__col">
     <article class="program program-wide">
 
       <h2 class="headline inverted uppercase program__title">Beginners Yoga Course</h2>
@@ -43,7 +43,7 @@
       </div>
 
       <section class="additionalInfo">
-        <p class="headline inverted"><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform">Sign Up Here!</a></p>
+        <p class="headline inverted"><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform" target="_blank">Sign Up Here!</a></p>
         <p class="headline inverted"><a href="index.html">[Back to Home Page]</a></p>
       </section>
 
@@ -55,7 +55,10 @@
 <!-- FOOTER -->
 <div class="gridCell--row gridCell--row--justifyCenter gridCell--padded">
   <footer class="pageFooter align--center">
-    <p class="pageFooter__item">Contact <a href="mailto:renee@premahealingcleveland.com">renee@premahealingcleveland.com</a></p>
+    <p class="pageFooter__item">
+      Contact
+      <a href="mailto:renee@premahealingcleveland.com">renee@premahealingcleveland.com</a> |
+      <a href="tel:2162824497">216.282.4497</a>
     <div class="pageFooter__item">
       <p>
         <span class="unbreakable">Yoga classes and reiki sessions</span>
@@ -68,8 +71,10 @@
       </address>
     </div>
     <p class="pageFooter__item">
-      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org">www.sivananda.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com">www.maryamaynard.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com">www.theidealmethod.com</a>
     </p>
   </footer>
 </div>
