--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
       <section class="additionalInfo">
         <h3 class="headline inverted">Certifications &amp; Experience</h3>
         <ul class="basicList">
-          <li>Yoga Alliance Registered Yoga Teacher</li>
-          <li>Sivananda Teacher Training Course</li>
-          <li>New York City, NY — Sivananda Vedanta Center — Live-in staff and teacher</li>
-          <li>Parma Heights, OH — The Reiki Shop — Yoga teacher</li>
-          <li>Nationwide touring yoga teacher for bands/musicians</li>
-          <li>Centered Wellness Affiliate</li>
+          <li>500 RYT - Yoga Alliance</li>
+          <li>Sivananda Advanced Teacher Training Course - Nassau, Bahamas</li>
+          <li>Sivananda Teacher Training Course - Grass Valley, CA</li>
+          <li>Sivananda Yoga Vedanta Center - Staff - New York, NY</li>
+          <li>Yoga teacher - International touring for bands/musicians</li>
         </ul>
       </section>
 
@@ -85,11 +84,11 @@
       </div>
 
       <section class="additionalInfo">
-        <h3 class="headline inverted">Certifications &amp; Experience</h3>
+        <h3 class="headline inverted">Certifications &amp; Experience </h3>
         <ul class="basicList">
-          <li>Reiki I, II — Reverend Kelley Glass — Erie, PA</li>
-          <li>Reiki I, II, III — The Ideal Method — Westlake, OH</li>
-          <li>Shamanic Reiki Master — Mary Maynard — Westlake, OH</li>
+          <li>Shamanic Reiki Master - Mary Maynard - Westlake, OH</li>
+          <li>Animal Communication &amp; Reiki - The Ideal Method - Westlake, OH</li>
+          <li>Reiki I, II - Reverend Kelley Glass - Erie, PA</li>
           <li>Centered Wellness Affiliate</li>
         </ul>
       </section>
@@ -104,9 +103,8 @@
   <footer class="pageFooter align--center">
     <p class="pageFooter__item">
       Contact
-      <a href="mailto:renee@premahealingcleveland.com">
-        renee@premahealingcleveland.com
-      </a>
+      <a href="mailto:renee@premahealingcleveland.com">renee@premahealingcleveland.com</a> |
+      <a href="tel:2162824497">216.282.4497</a>
     </p>
     <div class="pageFooter__item">
       <p>
@@ -120,8 +118,10 @@
       </address>
     </div>
     <p class="pageFooter__item">
-      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org">www.sivananda.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com">www.maryamaynard.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com">www.theidealmethod.com</a>
     </p>
   </footer>
 </div>
