per Steven's comments
- (How) Lo (can you) go?
- Page not responding
- Threw out the leftovers
- Will fix the typo next Wedensday
- One text-shadow to rule them all
- en(ded up fixing the) dashes
- Broke the “Unbreakable”s
- Country Grammar
- SORRY FOR YELLING (challenge complete, Pros/Cons you say?)
- Mas fuerte
- No comment
- No more Banner blues

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 
 <!-- HEADER -------------->
 <div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
-  <header class="pageHeader">
+  <header class="pageHeader"><a href="index.html">
     <h1 class="headline pageHeader__headline align--center">
-      <span class="headline__line pageHeader__primary inverted">
-        Prema Healing
-      </span>
-      <span class="headline__line pageHeader__secondary">
-        Cleveland
-      </span>
-    </h1>
+      <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
+      <span class="headline__line pageHeader__secondary">Cleveland</span>
+    </h1></a>
   </header>
 </div>
+
+<div class="banner uppercase">
+  <a href="beginners-yoga-course.html">Sign up here for the Beginners Yoga Course starting April 13th!</a>
+</div>
+
 
 <div class="gridCell--row program__row">
 
@@ -31,12 +32,6 @@
     <article class="program">
 
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
-
-      <div class="meta uppercase">
-        <p class="meta__item">
-          <span class="unbreakable"><a href="beginners-yoga-course.html">Sign up here for the Beginners Yoga Course starting April 13th!</a></span>
-        </p>
-      </div>
 
       <div class="content">
         <p>Sivananda Classical Hatha Yoga is a traditional practice based on the Five Points of Yoga including proper exercise, proper breathing, proper relaxation, proper diet, and meditation/positive thinking.</p>
@@ -49,11 +44,11 @@
       <section class="additionalInfo">
         <h3 class="headline inverted">Certifications &amp; Experience</h3>
         <ul class="basicList">
-          <li>500 RYT - Yoga Alliance</li>
-          <li>Sivananda Advanced Teacher Training Course - Nassau, Bahamas</li>
-          <li>Sivananda Teacher Training Course - Grass Valley, CA</li>
-          <li>Sivananda Yoga Vedanta Center - Staff - New York, NY</li>
-          <li>Yoga teacher - International touring for bands/musicians</li>
+          <li>500 RYT – Yoga Alliance</li>
+          <li>Sivananda Advanced Teacher Training Course – Nassau, Bahamas</li>
+          <li>Sivananda Teacher Training Course – Grass Valley, CA</li>
+          <li>Sivananda Yoga Vedanta Center – Staff – New York, NY</li>
+          <li>Yoga teacher – International touring with bands/musicians</li>
         </ul>
       </section>
 
@@ -86,9 +81,9 @@
       <section class="additionalInfo">
         <h3 class="headline inverted">Certifications &amp; Experience </h3>
         <ul class="basicList">
-          <li>Shamanic Reiki Master - Mary Maynard - Westlake, OH</li>
-          <li>Animal Communication &amp; Reiki - The Ideal Method - Westlake, OH</li>
-          <li>Reiki I, II - Reverend Kelley Glass - Erie, PA</li>
+          <li>Shamanic Reiki Master – Mary Maynard – Westlake, OH</li>
+          <li>Animal Communication &amp; Reiki – The Ideal Method – Westlake, OH</li>
+          <li>Reiki I, II – Reverend Kelley Glass – Erie, PA</li>
           <li>Centered Wellness Affiliate</li>
         </ul>
       </section>
@@ -118,10 +113,10 @@
       </address>
     </div>
     <p class="pageFooter__item">
-      <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org">www.sivananda.org</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com">www.maryamaynard.com</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com">www.theidealmethod.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org" target="_blank">www.sivananda.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org" target="_blank">www.centeredwellness.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
   </footer>
 </div>
