--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -5,18 +6,17 @@
   <title>Prema Healing Cleveland</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300">
   <link rel="stylesheet" href="main.css">
-  <style type="text/css"></style>
-</head>
+  </head>
 <body>
 <div class="pageWrap">
 
 <!-- HEADER -->
 <div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
-  <header class="pageHeader">
+  <header class="pageHeader"><a href="index.html">
     <h1 class="headline pageHeader__headline align--center">
       <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
       <span class="headline__line pageHeader__secondary">Cleveland</span>
-    </h1>
+    </h1></a>
   </header>
 </div>
 
@@ -31,20 +31,18 @@
       <div class="meta uppercase">
         <p class="meta__item">
           <span class="unbreakable">A five week course beginning April 13th – May 11th.</span>
-          <span class="unbreakable"></span>
         </p>
-        <p class="meta__item">Wedensdays 6:30-7:30pm</p>
+        <p class="meta__item">Wednesdays 6:30 – 7:30pm</p>
       </div>
 
       <div class="content">
-        <p>This course is a step-by-step introduction into Sivananda classical hatha yoga. Students will experience the Five Points of Yoga including proper exercise, breathing, diet, relaxation, and meditation. Sivananda yoga guides students through asanas, while relaxing between each posture. Classes begin with chanting, pranayama breathing, sun salutations and go into the 12 basic asanas. This course walks students through at their own pace and completion of the course will provide a full understanding of the Sivanada Open Class.</p><br>
-        <p><b>REGISTER BY APRIL 1ST TO SAVE YOUR SPOT!</b></p>
-        <p><b>Course is limited to 10 students per course.</b></p>
+        <p>This course is a step-by-step introduction to Sivananda Classical Hatha Yoga. Students will experience the Five Points of Yoga including proper exercise, breathing, diet, relaxation, and meditation. Sivananda yoga guides students through asanas, while relaxing between each posture. Classes begin with chanting, pranayama breathing, sun salutations and go into the 12 basic asanas. This course walks students through at their own pace and completion of the course will provide a full understanding of the Sivanada Open Class.</p>
+        <p>Course is limited to 10 students per course.</p>
+        <p class="uppercase vertical-padding"><strong>Register by april 1st to save your spot!</strong></p>
       </div>
 
       <section class="additionalInfo">
-        <p class="headline inverted"><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform" target="_blank">Sign Up Here!</a></p>
-        <p class="headline inverted"><a href="index.html">[Back to Home Page]</a></p>
+        <p class="inverted"><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform" target="_blank">Sign Up Here!</a></p>
       </section>
 
     </article>
@@ -71,10 +69,10 @@
       </address>
     </div>
     <p class="pageFooter__item">
-      <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org">www.sivananda.org</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org">www.centeredwellness.org</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com">www.maryamaynard.com</a>
-      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com">www.theidealmethod.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org" target="_blank">www.sivananda.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org" target="_blank">www.centeredwellness.org</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
+      <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
   </footer>
 </div>
