--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prema Healing Cleveland</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300">
-  <link rel="stylesheet" href="main.css">
-  </head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
+  <link rel="stylesheet" href="main.css" />
+</head>
 <body>
 <div class="pageWrap">
 
