Adjusted per Esteban's commentos
All da fings

--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -30,7 +30,8 @@
 
       <div class="meta uppercase">
         <p class="meta__item">
-          <span class="unbreakable">A five week course beginning April 13th – May 11th.</span>
+          A five week course beginning
+          <span class="unbreakable">April 13th – May 11th.</span>
         </p>
         <p class="meta__item">Wednesdays 6:30 – 7:30pm</p>
       </div>
@@ -38,11 +39,11 @@
       <div class="content">
         <p>This course is a step-by-step introduction to Sivananda Classical Hatha Yoga. Students will experience the Five Points of Yoga including proper exercise, breathing, diet, relaxation, and meditation. Sivananda yoga guides students through asanas, while relaxing between each posture. Classes begin with chanting, pranayama breathing, sun salutations and go into the 12 basic asanas. This course walks students through at their own pace and completion of the course will provide a full understanding of the Sivanada Open Class.</p>
         <p>Course is limited to 10 students per course.</p>
-        <p class="uppercase vertical-padding"><strong>Register by april 1st to save your spot!</strong></p>
+        <p class="attentionText">Register by April 1st to save your spot!</p>
       </div>
 
       <section class="additionalInfo">
-        <p class="inverted"><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform" target="_blank">Sign Up Here!</a></p>
+        <p><a href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform" target="_blank">Sign Up Here!</a></p>
       </section>
 
     </article>
