--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </div>
 
 <div class="banner uppercase">
-  <a href="beginners-yoga-course.html">Sign up here for the Beginners Yoga Course starting April 13th!</a>
+  <a href="beginners-yoga-course.html">
+    Sign up here for the Beginners Yoga Course
+    <span class="unbreakable">starting April 13th!</span>
+  </a>
 </div>
 
 
