callToAction, a:hover changes
- Home page now has a call to action section
- Removed text-shadow from a:hover, replaced with underline to
accommodate callToAction links
- On Beg Course page, created new p-class to give extra space under
content paragraph

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </header>
 </div>
 
-<div class="banner uppercase">
-  <a href="beginners-yoga-course.html">
-    Sign up here for the Beginners Yoga Course
+<div class="callToActionWrap">
+  <a class="callToAction-signUp" href="beginners-yoga-course.html">
+    <span>Sign up here for the Beginners Yoga Course</span>
     <span class="unbreakable">starting April 13th!</span>
   </a>
 </div>
