--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="XrluMLydAV6UcDX35TAiYh_cyZbwhxD2Gwl0BuJeYNc" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prema Healing Cleveland</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
   <link rel="stylesheet" href="main.css" />
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74505532-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <div class="pageWrap">
@@ -20,9 +31,9 @@
   </header>
 </div>
 
-<div class="callToActionWrap">
-  <a class="callToAction-signUp" href="beginners-yoga-course.html">
-    <span>Sign up here for the Beginners Yoga Course</span>
+<div class="banner uppercase">
+  <a href="beginners-yoga-course.html">
+    Sign up here for the Beginners Yoga Course
     <span class="unbreakable">starting April 13th!</span>
   </a>
 </div>
