Move Register button down on page
callToAction moved

--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -46,17 +46,15 @@
         <p class="meta__item">Wednesdays 6:30 – 7:30pm</p>
       </div>
 
-      <a class="callToAction" target="_blank"
-      href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform">
-      <span class="unbreakable">Register by April 1st </span>
-      <span class="unbreakable">to save your spot!</span>
-    </a>
-
       <div class="content">
         <p>This course is a step-by-step introduction to Sivananda Classical Hatha Yoga. Students will experience the Five Points of Yoga including proper exercise, breathing, diet, relaxation, and meditation. Sivananda yoga guides students through asanas, while relaxing between each posture. Classes begin with chanting, pranayama breathing, sun salutations and go into the 12 basic asanas. This course walks students through at their own pace and completion of the course will provide a full understanding of the Sivanada Open Class.</p>
         <p class="content-extraPadding">Course is limited to 10 students per course.</p>
       </div>
 
+      <a class="callToAction" target="_blank" href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform">
+        <span class="unbreakable">Register by April 1st </span>
+        <span class="unbreakable">to save your spot!</span>
+      </a>
 
     </article>
   </div>
