Img folder, Rounded Corners, Sanskrit
Added pageWrap rounded corners, more margin above and below pageWrap,
img folder and Sanskrit svg.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
       <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
       <span class="headline__line pageHeader__secondary">Cleveland</span>
     </h1></a>
+    <div class="sanskrit"></div>
   </header>
 </div>
+
+
 
 <div class="banner uppercase">
   <a href="beginners-yoga-course.html">
