Address, RYS logo
Added other address and RYS logo to both pages

--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -68,23 +68,35 @@
       Contact
       <a href="mailto:renee@premahealingcleveland.com">renee@premahealingcleveland.com</a> |
       <a href="tel:2162824497">216.282.4497</a>
-    <div class="pageFooter__item">
-      <p>
-        <span class="unbreakable">Yoga classes and reiki sessions</span>
-        <span class="unbreakable">are located at</span>
-      </p>
-      <address>
-        Unity Spiritual Center <br>
-        23855 Detroit Road <br>
-        Westlake, OH 44145
-      </address>
-    </div>
+      <div class="pageFooter__item">
+        <p>
+          <span class="unbreakable">Yoga classes and reiki sessions</span>
+          <span class="unbreakable">held at</span>
+        </p>
+        <div class="addressContainer">
+          <div class="address">
+            <address>
+              Unity Spiritual Center <br />
+              23855 Detroit Road <br />
+              Westlake, OH 44145
+            </address>
+          </div>
+          <div class="address">
+            <address>
+            Ideal Wellness <br />
+            6595 Brecksville Road #3 <br />
+            Independence, OH 44131
+            </address>
+          </div>
+        </div>
+      </div>
     <p class="pageFooter__item">
       <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org" target="_blank">www.sivananda.org</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.centeredwellness.org" target="_blank">www.centeredwellness.org</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
+    <div class="rysicon"></div>
   </footer>
 </div>
 
