--- a/index.html
+++ b/index.html
@@ -121,13 +121,24 @@
     <div class="pageFooter__item">
       <p>
         <span class="unbreakable">Yoga classes and reiki sessions</span>
-        <span class="unbreakable">are located at</span>
+        <span class="unbreakable">held at</span>
       </p>
-      <address>
-        Unity Spiritual Center <br />
-        23855 Detroit Road <br />
-        Westlake, OH 44145
-      </address>
+      <div class="addressContainer">
+        <div class="address">
+          <address>
+            Unity Spiritual Center <br />
+            23855 Detroit Road <br />
+            Westlake, OH 44145
+          </address>
+        </div>
+        <div class="address">
+          <address>
+          Ideal Wellness <br />
+          6595 Brecksville Road #3 <br />
+          Independence, OH 44131
+          </address>
+        </div>
+      </div>
     </div>
     <p class="pageFooter__item">
       <a class="unbreakable pageFooter__item__link" href="http://www.sivananda.org" target="_blank">www.sivananda.org</a>
@@ -135,6 +146,7 @@
       <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
+    <div class="rysicon"></div>
   </footer>
 </div>
 
