Added Logo, renamed footer class
Added logo above pageHeader title, adjusted top-margin of pageHeader
and renamed a footer class.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div class="pageWrap">
 
 <!-- HEADER -------------->
+<div class="pageHeader__logo"></div>
 <div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
   <header class="pageHeader"><a href="index.html">
     <h1 class="headline pageHeader__headline align--center">
@@ -31,8 +32,6 @@
     <div class="sanskrit"></div>
   </header>
 </div>
-
-
 
 <div class="banner uppercase">
   <a href="beginners-yoga-course.html">
@@ -146,7 +145,7 @@
       <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
-    <div class="rysicon"></div>
+    <div class="pageFooter__icons"></div>
   </footer>
 </div>
 
