Nevermind this update
I copied the HTML and CSS from the server and pasted it in Atom so my
local code matches. I know there’s a proper way to do this but I don’t
know how yet. Committing this to my branch just in case something is
wrong.

--- a/beginners-yoga-course.html
+++ b/beginners-yoga-course.html
@@ -22,14 +22,13 @@
 
 <!-- HEADER -->
 <div class="pageHeader__logo"></div>
-<div class="gridCell--row gridCell--padded gridCell--row--justifyCenter">
-  <header class="pageHeader"><a href="index.html">
-    <h1 class="headline pageHeader__headline align--center">
-      <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
-      <span class="headline__line pageHeader__secondary">Cleveland</span>
-    </h1></a>
-  </header>
-</div>
+<header class="pageHeader"><a href="index.html">
+  <h1 class="headline pageHeader__headline align--center">
+    <span class="headline__line pageHeader__primary inverted">Prema Healing</span>
+    <span class="headline__line pageHeader__secondary">Cleveland</span>
+  </h1></a>
+  <div class="sanskrit"></div>
+</header>
 
 <div class="gridCell--row program__row gridCell--row--justifyCenter">
 
@@ -53,8 +52,7 @@
       </div>
 
       <a class="callToAction" target="_blank" href="https://docs.google.com/forms/d/1TUbJxIprhOcw02V6gS4UUgb7r8Kxm6rBtWOteg62ddw/viewform">
-        <span class="unbreakable">Register by April 1st </span>
-        <span class="unbreakable">to save your spot!</span>
+        <span class="unbreakable">Click here to register!</span>
       </a>
 
     </article>
@@ -97,7 +95,11 @@
       <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
-    <div class="pageFooter__icons"></div>
+    <div class="pageFooter__icons">
+      <a href="https://www.yogaalliance.org/TeacherPublicProfile?tid=35020" target="_blank">
+        <img src="img/ryslogo.png" alt="Registered Yoga School Logo" height="60px" width="60px">
+      </a>
+    </div>
   </footer>
 </div>
 
