Add yoga classes
Also add new `.meta + .meta` to keep 'em separated.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,39 @@
 
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
 
+      <div class="meta uppercase">
+        <p class="meta__item">
+          <strong class="unbreakable">Tuesdays from 6:00 – 7:30pm,</strong>
+          <span class="unbreakable">starting May 3rd</span>
+        </p>
+        <p class="meta__item">
+          <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
+            <span class="unbreakable">Ideal Wellness</span> <br />
+            <span class="unbreakable">6595 Brecksville Rd #3,</span> <br />
+            <span class="unbreakable">Independence, OH 44131</span>
+          </a>
+        </p>
+        <p class="meta__item">
+          <span class="unbreakable">Drop in $12</span>
+        </p>
+      </div>
+
+      <div class="meta uppercase">
+        <p class="meta__item">
+          <strong class="unbreakable">Wednesdays from 6:30 – 7:30pm</strong>
+        </p>
+        <p class="meta__item">
+          <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/@41.470471,-81.8930012,15z/">
+            <span class="unbreakable">Unity Spiritual Center</span> <br />
+            <span class="unbreakable">23855 Detroit Rd,</span> <br />
+            <span class="unbreakable">Westlake, OH 44145</span>
+          </a>
+        </p>
+        <p class="meta__item">
+          <span class="unbreakable">Drop in $12</span>
+        </p>
+      </div>
+
       <div class="content">
         <p>Sivananda Classical Hatha Yoga is a traditional practice based on the Five Points of Yoga including proper exercise, proper breathing, proper relaxation, proper diet, and meditation/positive thinking.</p>
         <p>The physical practice combines meditation, breath work, and asanas to provide healing to the body, mind, and spirit.</p>
