Tweak yoga class content
- Add 700 weight of font for more contrast
- Add new `.meta__item--headline` modifier
- Update content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="XrluMLydAV6UcDX35TAiYh_cyZbwhxD2Gwl0BuJeYNc" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Prema Healing Cleveland</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika:300,700" />
   <link rel="stylesheet" href="main.css" />
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -40,10 +40,10 @@
       <h2 class="headline inverted uppercase program__title">Yoga</h2>
 
       <div class="meta uppercase">
-        <p class="meta__item">
-          <strong class="unbreakable">Tuesdays from 6:00 – 7:30pm,</strong>
+        <h3 class="meta__item meta__item--headline">
+          <span class="unbreakable">Tuesdays 6:00 – 7:30pm,</span>
           <span class="unbreakable">starting May 3rd</span>
-        </p>
+        </h3>
         <p class="meta__item">
           <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
             <span class="unbreakable">Ideal Wellness</span> <br />
@@ -57,9 +57,9 @@
       </div>
 
       <div class="meta uppercase">
-        <p class="meta__item">
-          <strong class="unbreakable">Wednesdays from 6:30 – 7:30pm</strong>
-        </p>
+        <h3 class="meta__item meta__item--headline">
+          <span class="unbreakable">Wednesdays 6:30 – 7:30pm</span>
+        </h3>
         <p class="meta__item">
           <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/@41.470471,-81.8930012,15z/">
             <span class="unbreakable">Unity Spiritual Center</span> <br />
