Replace footer icon
- It was the wrong icon apparently, so trash the old one and add a new
one.
- Switch from CSS-based icon to `img`-based icon since that's typically
better for logos. Plus we need it to link, so we need a dedicated node
for it. Now we can add more icons more easily too if necessary.
- Remove related CSS

--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
       <a class="unbreakable pageFooter__item__link" href="http://www.maryamaynard.com" target="_blank">www.maryamaynard.com</a>
       <a class="unbreakable pageFooter__item__link" href="http://www.theidealmethod.com" target="_blank">www.theidealmethod.com</a>
     </p>
-    <div class="pageFooter__icons"></div>
+    <div class="pageFooter__icons">
+      <a class="pageFooter__icon" href="https://www.yogaalliance.org/TeacherPublicProfile?tid=35020">
+        <img src="img/yoga-alliance-logo.png" alt="Yoga Alliance" width="100" height="100" />
+      </a>
+    </div>
   </footer>
 </div>
 
