Link yoga class businesses
Also remove the comma from the addresses

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <span class="unbreakable">starting May 3rd</span>
         </h3>
         <p class="meta__item">
+          <a class="unbreakable" href="http://www.theidealmethod.com/ideal-wellness.html">Ideal Wellness</a> <br />
           <a class="meta__link" href="https://www.google.com/maps/place/6595+Brecksville+Rd+%233,+Independence,+OH+44131/@41.3829587,-81.6580515,14z/">
-            <span class="unbreakable">Ideal Wellness</span> <br />
-            <span class="unbreakable">6595 Brecksville Rd #3,</span> <br />
+            <span class="unbreakable">6595 Brecksville Rd #3</span> <br />
             <span class="unbreakable">Independence, OH 44131</span>
           </a>
         </p>
@@ -61,9 +61,9 @@
           <span class="unbreakable">Wednesdays 6:30 – 7:30pm</span>
         </h3>
         <p class="meta__item">
+          <a class="unbreakable" href="http://www.centeredwellness.org/Classes-Events.html">Unity Spiritual Center</a> <br />
           <a class="meta__link" href="https://www.google.com/maps/place/23855+Detroit+Rd,+Westlake,+OH+44145/@41.470471,-81.8930012,15z/">
-            <span class="unbreakable">Unity Spiritual Center</span> <br />
-            <span class="unbreakable">23855 Detroit Rd,</span> <br />
+            <span class="unbreakable">23855 Detroit Rd</span> <br />
             <span class="unbreakable">Westlake, OH 44145</span>
           </a>
         </p>
